<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LayoutLinear">

    <Button
        android:layout_gravity="center"
        android:gravity="top|right"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:text="@string/btn1_text"/>

    <Button
        android:layout_gravity="left"
        android:gravity="center|left"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:text="@string/btn2_text"/>

    <Button
        android:layout_gravity="right"
        android:gravity="bottom|right"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:text="@string/btn3_text"/>

</LinearLayout>